--- a/app/views/AppealConfirmationPage.scala.html
+++ b/app/views/AppealConfirmationPage.scala.html
@@ -24,7 +24,7 @@
         bullets: components.bullets,
         link: components.link)
 
-@(periodStart: String, periodEnd: String, isObligationAppeal: Boolean = false, showDigitalCommsMessage: Boolean, appealType: PenaltyTypeEnum.Value, bothPenalties: String, isAgent: Boolean)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(periodStart: String, periodEnd: String, isObligationAppeal: Boolean = false, showDigitalCommsMessage: Boolean, appealType: PenaltyTypeEnum.Value, bothPenalties: String, isAgent: Boolean, vrn: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @penaltyType = @{
     (appealType, bothPenalties) match {
@@ -61,7 +61,7 @@
     </div>
 
     <p class="govuk-body govuk-!-padding-top-4">@messages("appealConfirmation.p1")</p>
-    <p class="govuk-body">@messages("appealConfirmation.p2")</p>
+    <p class="govuk-body">@messages("appealConfirmation.p2", vrn)</p>
 
     <h2 class="govuk-heading-m">@messages("appealConfirmation.whatHappensNext")</h2>
 
