[PRM-2882] Added id to view link

--- a/app/views/AppealConfirmationPage.scala.html
+++ b/app/views/AppealConfirmationPage.scala.html
@@ -64,7 +64,7 @@
     <p class="govuk-body">@messages("appealConfirmation.p2", vrn)</p>
 
     <p class ="govuk-body">
-        <a class="govuk-link" href="@{controllers.routes.ViewAppealDetailsController.onPageLoad().url}" rel="noreferrer noopener" target="_blank">
+        <a class="govuk-link" href="@{controllers.routes.ViewAppealDetailsController.onPageLoad().url}" rel="noreferrer noopener" target="_blank" id="details-link">
             @messages("appealConfirmation.appealDetailsLink")
         </a>
     </p>
