--- a/app/views/layouts/GovUkPageLayout.scala.html
+++ b/app/views/layouts/GovUkPageLayout.scala.html
@@ -87,7 +87,9 @@
         @contentBlock
         </div>
     </div>
-    @techincalIssuesHelper()
+    <div class="govuk-!-display-none-print">
+      @techincalIssuesHelper()
+    </div>
 }
 
 @govukTemplate(
