[PRM-2882] Added inset test and feature switch

--- a/app/views/ViewAppealDetailsPage.scala.html
+++ b/app/views/ViewAppealDetailsPage.scala.html
@@ -39,4 +39,9 @@
           </div>
          }
         </dl>
+
+        <div class="govuk-inset-text">
+            <p>@{messages("viewAppealDetails.warn.1")}</p>
+            <p>@{messages("viewAppealDetails.warn.2")}</p>
+        </div>
 }
