[PRM-2882] Created page for viewing Appeal Details (#504)
* [PRM-2882] [WIP] Added ViewAppealDetails page and link on confirmation page

* [PRM-2882] Added unit and it tests for ViewAppealDetails

* [PRM-2882] Added id to view link

* [PRM-2882] [WIP] Switched to using previouslySubmittedJourneyId

* [PRM-2882] Updated tests for view appeal details

* [PRM-2882] Addressed review comments

* [PRM-2882] Further clean up

* [PRM-2882] Added inset test and feature switch

--- a/app/views/CheckYourAnswersPage.scala.html
+++ b/app/views/CheckYourAnswersPage.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @import config.AppConfig
-@import models.appeals.CheckYourAnswersRow
+@import models.appeals.QuestionAnswerRow
 @import views.html.helper.CSPNonce
 
 @this(layout: Layout,
@@ -26,7 +26,7 @@
         warningText: components.warningText,
         pageHeader: components.pageHeader)
 
-@(contentToDisplayInSummaryList: Seq[CheckYourAnswersRow], pageMode: PageMode)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
+@(contentToDisplayInSummaryList: Seq[QuestionAnswerRow], pageMode: PageMode)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = messages("checkYourAnswers.headingAndTitle"),
     isPageFullWidth = false,
