[PRM-2924] - Remove duplicate file upload logic

--- a/app/views/components/Header.scala.html
+++ b/app/views/components/Header.scala.html
@@ -14,8 +14,7 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.hmrcfrontend.views.html.components.HmrcHeader
-@import uk.gov.hmrc.hmrcfrontend.views.html.components.{Header => headerComponent}
+@import uk.gov.hmrc.hmrcfrontend.views.html.components.{HmrcHeader, Header => headerComponent}
 @import uk.gov.hmrc.hmrcfrontend.views.viewmodels.language.{Cy, En}
 
 @this(hmrcHeader: HmrcHeader)
