[PRM-3060] Updated technical error link message

--- a/app/views/errors/TechnicalErrorPage.scala.html
+++ b/app/views/errors/TechnicalErrorPage.scala.html
@@ -24,7 +24,7 @@
     <p class="govuk-body">
         @link(
             link = appConfig.penaltiesFrontendUrl,
-            messageKey = "incompleteSessionData.link",
+            messageKey = "technicalError.link",
             button = false,
             id = Some("penalties-link")
         )
