[PRM-3072] Added tests for IfYouvePaidYourVAT tests

--- a/app/views/IfYouvePaidYourVATPage.scala.html
+++ b/app/views/IfYouvePaidYourVATPage.scala.html
@@ -29,7 +29,7 @@
 ) {
     @pageHeader(Some(messages("paidYourVat.headingAndTitle")))
 
-    <p class="govuk-body">@messages("paidYorVat.p1")</p>
+    <p class="govuk-body">@messages("paidYourVat.p1")</p>
 
     <p class="govuk-body">@messages("paidYourVat.p2")</p>
 
