PRM-3109 Added Missing link and removed println

--- a/app/views/findOutHowToAppeal/HowToAppealPage.scala.html
+++ b/app/views/findOutHowToAppeal/HowToAppealPage.scala.html
@@ -59,4 +59,9 @@
         id = Some("tax-tribunal-link")
     )
     </p>
+    <p class="govuk-body">
+        <a class="govuk-link" href="@{appConfig.penaltiesFrontendUrl}" id="penalties-link">
+            @messages("agent.common.returnToPenalties")
+        </a>
+    </p>
 }
